<resources>
    <string name="app_name">Geography Quiz</string>
    <string name="title_step_1">Difficulty</string>
    <string name="description_step_1">Before you start learning new things about our planet and answering questions about geography, let\'s talk about the rules.\nThe game has tests of varying difficulty. Don\'t worry if you forgot everything that was said at school, you will quickly get used to the easy levels and be able to solve more difficult ones.</string>
    <string name="title_step_2">Rules</string>
    <string name="description_step_2">For each test you have three hearts. For each error, one of them is removed, which means that after the third error, the test will be terminated. But don\'t worry, you can always replay it.</string>
    <string name="title_step_3">Timer</string>
    <string name="description_step_3">And there\'s also a timer. Each question has a specific time limit. If you are late at least once, the test will fail, but I am sure that you will have time to do everything!</string>
    <string name="btn_start_text">Start</string>
    <string name="GQ_reduction_text">G • Q</string>
    <string name="text_skip">Skip</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_created_by">Created by</string>
    <string name="name_of_creator">TEMA:D</string>
    <string name="text_easy">Easy</string>
    <string name="text_description_inside_easy">As long as you obtain 6th level,\nyou are about to achieve the key of medium levels</string>
    <string name="text_medium">Medium</string>
    <string name="text_description_inside_medium">As long as you obtain 6th level,\nyou are about to achieve the key of insane levels</string>
    <string name="text_insane">Insane</string>
    <string name="text_description_inside_insane">As long as you obtain 6th level,\nyou are about to teach others!</string>
    <string name="text_finish_congrats">Congratulations</string>
    <string name="text_finish_score">Your score:</string>
    <string name="btn_text_go_menu">go to menu</string>
    <string name="text_score">score:</string>
    <string name="text_question_no">question:</string>
    <string name="text_select_answer">Select the answer</string>
    <string name="btn_text_submit">submit</string>
    <string name="btn_text_next">next</string>
    <string name="text_game_over">Game Over</string>
    <string name="text_game_over_description">You lose!\nTry again later</string>
    <string name="text_new">Quick</string>
    <string name="text_currency_diff">15 questions non-stop,\neach question takes 10 seconds</string>
    <string name="text_difficulty">Choose\nGame Mode</string>
    <string name="text_coming_soon">Coming soon</string>
    <string name="text_currency">Currency</string>
    <string name="text_flags">Flags</string>
    <string name="text_country_city">Capital - Country</string>
    <string name="text_description_easy_outside">These tasks could be solved even by my 4th year old child</string>
    <string name="text_description_medium_outside">This level represents that you are able to teach others, because lack of people could solve this LVLs</string>
    <string name="text_description_insane_outside">TRY YOURSELF and solve the most complicated tasks of geography nowadays</string>
    <string name="text_ordinary_person">Ordinary Person</string>
    <string name="text_teacher">Teacher</string>
    <string name="text_voyager">Voyager</string>
    <string name="text_businessman">Businessman</string>
    <string name="text_adventurer">Adventurer</string>
    <string name="text_alien">Alien</string>
    <string name="text_time_is_over">Over</string>
    <string name="btn_text_finish">Finish</string>
    <string name="text_selection_of_option">Select an option</string>
    <string name="easy_lvl_question_1">What is the capital of Spain?</string>
    <string name="easy_lvl_question_1_option_1">Berlin</string>
    <string name="easy_lvl_question_1_option_2">Paris</string>
    <string name="easy_lvl_question_1_option_3">Madrid</string>
    <string name="easy_lvl_question_1_option_4">Moscow</string>
    <string name="easy_lvl_question_2">Which geographic feature is man-made?</string>
    <string name="easy_lvl_question_2_option_1">Plain</string>
    <string name="easy_lvl_question_2_option_2">Port</string>
    <string name="easy_lvl_question_2_option_3">River</string>
    <string name="easy_lvl_question_2_option_4">Mountain</string>
    <string name="easy_lvl_question_3">What is the name of the device shown in the figure, which is used in geographical research?</string>
    <string name="easy_lvl_question_3_option_1">Compass</string>
    <string name="easy_lvl_question_3_option_2">Ruler</string>
    <string name="easy_lvl_question_3_option_3">Thermometer</string>
    <string name="easy_lvl_question_3_option_4">Barometer</string>
    <string name="easy_lvl_question_4">What is the unit of measure for salinity of water called?</string>
    <string name="easy_lvl_question_4_option_1">Pascal</string>
    <string name="easy_lvl_question_4_option_2">Kilobar</string>
    <string name="easy_lvl_question_4_option_3">Yard</string>
    <string name="easy_lvl_question_4_option_4">PPM</string>
    <string name="easy_lvl_question_5">Which ocean is the largest in area?</string>
    <string name="easy_lvl_question_5_option_1">Atlantic ocean</string>
    <string name="easy_lvl_question_5_option_2">Pacific ocean</string>
    <string name="easy_lvl_question_5_option_3">Indian ocean</string>
    <string name="easy_lvl_question_5_option_4">Arctic ocean</string>
    <string name="easy_lvl_question_6">What is the name of the largest lake on Earth?</string>
    <string name="easy_lvl_question_6_option_1">Baikal lake</string>
    <string name="easy_lvl_question_6_option_2">Caspian lake</string>
    <string name="easy_lvl_question_6_option_3">Ladoga lake</string>
    <string name="easy_lvl_question_6_option_4">Victoria lake</string>
    <string name="easy_lvl_question_7">What is the name of the largest island on Earth?</string>
    <string name="easy_lvl_question_7_option_1">Greenland</string>
    <string name="easy_lvl_question_7_option_2">New Guinea</string>
    <string name="easy_lvl_question_7_option_3">New Zeeland</string>
    <string name="easy_lvl_question_7_option_4">Madagascar</string>
    <string name="easy_lvl_question_8">What is the name of the continent represented in the snap?</string>
    <string name="easy_lvl_question_8_option_1">Australia</string>
    <string name="easy_lvl_question_8_option_2">Eurasia</string>
    <string name="easy_lvl_question_8_option_3">Japan</string>
    <string name="easy_lvl_question_8_option_4">North America</string>
    <string name="easy_lvl_question_9">What was the name of the person who created the first world globe?</string>
    <string name="easy_lvl_question_9_option_1">Herodotus</string>
    <string name="easy_lvl_question_9_option_2">Ptolemy</string>
    <string name="easy_lvl_question_9_option_3">Waldseemüller</string>
    <string name="easy_lvl_question_9_option_4">Beheim</string>
    <string name="easy_lvl_question_10">What is the name for behaviour of the river during the particular period of time?</string>
    <string name="easy_lvl_question_10_option_1">River system</string>
    <string name="easy_lvl_question_10_option_2">River character</string>
    <string name="easy_lvl_question_10_option_3">River regime</string>
    <string name="easy_lvl_question_10_option_4">River flow</string>
    <string name="easy_lvl_question_11">What causes the difference in time in different parts of the Earth?</string>
    <string name="easy_lvl_question_11_option_1">Climatic conditions</string>
    <string name="easy_lvl_question_11_option_2">The movement of the earth around the sun</string>
    <string name="easy_lvl_question_11_option_3">Axial rotation of the earth</string>
    <string name="easy_lvl_question_11_option_4">Change of seasons</string>
    <string name="easy_lvl_question_12">What plain is NOT on the Eurasian continent?</string>
    <string name="easy_lvl_question_12_option_1">West Siberian</string>
    <string name="easy_lvl_question_12_option_2">Amazonian</string>
    <string name="easy_lvl_question_12_option_3">East European</string>
    <string name="easy_lvl_question_12_option_4">Indo-Gangetic</string>
    <string name="easy_lvl_question_13">The day of March 21 in the northern hemisphere is called the day:</string>
    <string name="easy_lvl_question_13_option_1">Summer solstice</string>
    <string name="easy_lvl_question_13_option_2">Spring equinox</string>
    <string name="easy_lvl_question_13_option_3">Autumn equinox</string>
    <string name="easy_lvl_question_13_option_4">Winter solstice</string>
    <string name="easy_lvl_question_14">Consider a photograph depicting a dangerous natural phenomenon. In what part of the geographic shell of the earth did this phenomenon originate?</string>
    <string name="easy_lvl_question_14_option_1">Lithosphere</string>
    <string name="easy_lvl_question_14_option_2">Hydrosphere</string>
    <string name="easy_lvl_question_14_option_3">Biosphere</string>
    <string name="easy_lvl_question_14_option_4">Atmosphere</string>
    <string name="easy_lvl_question_15">Rocks formed as a result of the accumulation of substances precipitated at the bottom of reservoirs are called:</string>
    <string name="easy_lvl_question_15_option_1">Metamorphic</string>
    <string name="easy_lvl_question_15_option_2">Sedimentary</string>
    <string name="easy_lvl_question_15_option_3">Igneous</string>
    <string name="easy_lvl_question_15_option_4">Organic</string>
    <string name="easy_lvl_question_16">Mountains on the map are indicated by color:</string>
    <string name="easy_lvl_question_16_option_1">Blue</string>
    <string name="easy_lvl_question_16_option_2">Yellow</string>
    <string name="easy_lvl_question_16_option_3">Green</string>
    <string name="easy_lvl_question_16_option_4">Brown</string>
    <string name="easy_lvl_question_17">On what continent could this sign be located?</string>
    <string name="easy_lvl_question_17_option_1">Africa</string>
    <string name="easy_lvl_question_17_option_2">South America</string>
    <string name="easy_lvl_question_17_option_3">Eurasia</string>
    <string name="easy_lvl_question_17_option_4">North America</string>
    <string name="easy_lvl_question_18">At meteorological stations, pressure is determined using:</string>
    <string name="easy_lvl_question_18_option_1">Hygrometer</string>
    <string name="easy_lvl_question_18_option_2">Thermometer</string>
    <string name="easy_lvl_question_18_option_3">Weather vane</string>
    <string name="easy_lvl_question_18_option_4">Barometer</string>
    <string name="easy_lvl_question_19">A river CANNOT originate from:</string>
    <string name="easy_lvl_question_19_option_1">Swamps</string>
    <string name="easy_lvl_question_19_option_2">Lakes</string>
    <string name="easy_lvl_question_19_option_3">Seas</string>
    <string name="easy_lvl_question_19_option_4">Spring</string>
    <string name="easy_lvl_question_20">South America is the most ... mainland</string>
    <string name="easy_lvl_question_20_option_1">Hot</string>
    <string name="easy_lvl_question_20_option_2">Wet</string>
    <string name="easy_lvl_question_20_option_3">Dry</string>
    <string name="easy_lvl_question_20_option_4">giant, in terms of area</string>
    <string name="easy_lvl_question_21">Ocean water temperature is influenced by:</string>
    <string name="easy_lvl_question_21_option_1">Bottom topography</string>
    <string name="easy_lvl_question_21_option_2">Rainfall</string>
    <string name="easy_lvl_question_21_option_3">Geographical latitude</string>
    <string name="easy_lvl_question_21_option_4">Number of fish</string>
    <string name="easy_lvl_question_22">The layer of the atmosphere in which all weather changes occur</string>
</resources>