<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@android:color/transparent"
    tools:context=".OnBoarding.StepThreeFragment">


    <LinearLayout
        android:id="@+id/linimgs_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">



        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/img_timer"
            app:tint="@color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_step_3"
        android:textAllCaps="true"
        android:fontFamily="@font/font_raleway"
        android:textColor="@color/white"
        android:letterSpacing=".1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:text="@string/description_step_3"
        android:layout_margin="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:cornerRadius="4dp"
        android:elevation="4dp"
        android:text="@string/btn_start_text"
        android:textColor="@color/purple_500"
        android:backgroundTint="@color/white"/>

</LinearLayout>