<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Main.MainActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/main_anim"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_family_travel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/font_raleway"
                android:letterSpacing="0.1"
                android:text="@string/text_difficulty"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_light_lvls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/blue"
                android:elevation="4dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/font_raleway"
                        android:text="@string/text_easy"
                        android:textColor="@color/white"
                        android:textSize="20dp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/text_description_easy_outside"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_medium_lvls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/pink"
                android:elevation="4dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/font_raleway"
                            android:text="@string/text_medium"
                            android:textColor="@color/white"
                            android:textSize="20dp" />

                        <ImageView
                            android:id="@+id/img_lock_of_medium_lvl"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/img_lock"
                            app:tint="@color/white" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/text_description_medium_outside"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_insane_lvls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/orange"
                android:elevation="4dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/font_raleway"
                            android:text="@string/text_insane"
                            android:textColor="@color/white"
                            android:textSize="20dp" />

                        <ImageView
                            android:id="@+id/img_lock_of_insane_lvl"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/img_lock"
                            app:tint="@color/white" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/text_description_insane_outside"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/font_raleway"
                android:letterSpacing="0.1"
                android:text="@string/text_coming_soon"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">





            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:elevation="4dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/font_raleway"
                        android:text="@string/text_flags"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        android:textSize="20dp" />


                </LinearLayout>



                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:alpha="0.8"
                        android:background="@color/white" />



            </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">





            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="4dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/font_raleway"
                        android:text="@string/text_currency"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        android:textSize="20dp" />


                </LinearLayout>



                <View
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:alpha="0.8"
                    android:background="@color/white" />



            </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:fontFamily="@font/font_raleway"
                            android:text="@string/text_country_city"
                            android:layout_margin="10dp"
                            android:textColor="@color/black"
                            android:textSize="20dp" />


                    </LinearLayout>



                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:alpha="0.8"
                        android:background="@color/white" />



                </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

   

</androidx.coordinatorlayout.widget.CoordinatorLayout>